Fix bullet icon spacing

--- a/resources/sass/v2/molecules/_footer-sitemap.scss
+++ b/resources/sass/v2/molecules/_footer-sitemap.scss
@@ -36,9 +36,6 @@
         a {
             color: #fff;
         }
-        .fa-cube {
-            margin-right: 0.5em;
-        }
 
         &__category {
             padding-right: 3em;
